# rust

./: .gitignore  README.md
.github/workflows/: fff-ci.yml  (+2 more)
fast_file_flow/: CLAUDE.md  Cargo.toml  README.md  config.ffflow
fast_file_flow/.github/workflows/: ci.yml
fast_file_flow/src/: general.rs  lib.rs  main.rs  styles.rs
fast_file_flow/src/ai/: mod.rs
fast_file_flow/src/ai/dbscan/: mod.rs
fast_file_flow/src/ai/k_means/: mod.rs
fast_file_flow/src/ai/knn/: mod.rs
fast_file_flow/src/ai/linear_regression/: mod.rs
fast_file_flow/src/ai/pca/: mod.rs
fast_file_flow/src/ai/shared/: mod.rs
fast_file_flow/src/app/: mod.rs
fast_file_flow/src/app/easing/: mod.rs
fast_file_flow/src/app/linear/: mod.rs
fast_file_flow/src/constants/: english.rs  icons.rs  mod.rs  path.rs  sizes.rs
fast_file_flow/src/correlation_analysis/: mod.rs
fast_file_flow/src/dialog/: mod.rs
fast_file_flow/src/dynamictable/: mod.rs
fast_file_flow/src/dynamictable/iced_column/: mod.rs
fast_file_flow/src/dynamictable/iced_row/: mod.rs
fast_file_flow/src/dynamictable/simple_column/: mod.rs
fast_file_flow/src/export/: mod.rs
fast_file_flow/src/fast_file_flow/: mod.rs
fast_file_flow/src/fast_file_flow/easing/: mod.rs
fast_file_flow/src/fast_file_flow/iced_app/: mod.rs
fast_file_flow/src/general/: constants.rs
fast_file_flow/src/option/: mod.rs
fast_file_flow/src/save_options/: mod.rs
fast_file_flow/src/save_options/filter/: mod.rs
fast_file_flow/src/stadistics/: mod.rs
fast_file_flow/src/stored_file/: mod.rs
fast_file_flow/src/util/: mod.rs
(+7 files in other folders)
