[package]
name = "fast_file_flow"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = {version = "1.12.0", features = ["attributes"]}
chardet = "0.2.4"
csv = "1.3.0"
csv-async = { version = "1.3.0", features = ["tokio"] }
futures = "0.3.30"
iced = { version = "0.12.1", features = ["image","canvas","lazy","tokio"] } 
iced_futures = "0.12.0"
iced_table = "0.12.0"
iced_widget = "0.12"
image = "0.25.1"
native-dialog = "0.7.0"
num-format = "0.4.4"
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full"] }
