[package]
name = "fast_file_flow"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = {version = "1.12.0", features = ["attributes"]}
chardet = "0.2.4"
csv = "1.3.0"
csv-async = { version = "1.3.0", features = ["tokio"] }
futures = "0.3.30"
iced = { version = "0.12.1", features = ["image","canvas","lazy","tokio","advanced"] } 
iced_futures = "0.12.0"
iced_table = "0.12.0"
iced_widget = "0.12"
image = "0.25.1"
linfa = "0.7.0"
linfa-clustering = "0.7.0"
linfa-datasets = "0.7.0"
lyon_algorithms = "1.0.4"
native-dialog = "0.7.0"
ndarray = {version = "0.15.6", features = ["rayon"]}
ndarray-rand = "0.14.0"
num-format = "0.4.4"
once_cell = "1.19.0"
plotters = "0.3.6"
rand = "0.8.5"
rayon = "1.10.0"
regex = "1.10.5"
serde_json = "1.0.120"
statistical = "1.0.0"
tokio = { version = "1.38.0", features = ["full"] }
